Events page tweaks: -date & time: *you can just leave the info icon/hoover icon, takes up too much space. Sorry about that Andy. *make distance between time and date same as sex/status or region/location. Please also make sure the distance below is the same as the other boxes (see location page). This way all the boxes will look more or less the same.

--- a/style.css
+++ b/style.css
@@ -156,10 +156,6 @@ body.single-location .framed_box_content {
   padding: 10px;
 }
 
-body.single-event .date-n-time h5 {
-  margin-bottom: 0;
-}
-
 body.single-event .date-n-time .tooltip {
   min-width: 100px;
 }
@@ -178,10 +174,9 @@ body.single-event .framed_box.participants .one_half {
   float: left !important;
 }
 
-body.single-event .framed_box.location a.pad-10 {
-  padding-bottom: 0;
+body.single-event .framed_box.participants .clearfix {
+  padding-bottom: 10px;
 }
-
 
 body.single-event .wt_button.small {
   margin-right: 0;
